fix product download saving